[project]
name = "program-sets-demo"
version = "0.1.0"
description = "Example repository showing how to combine Amazon Braket ProgramSets with Mitiq error mitigation."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "amazon-braket-sdk>=1.82",
    "mitiq>=0.33",
    "cirq-ionq",
    "ipykernel>=6.28",
    "notebook>=7.2"
]
